--- a/src/transfer.html
+++ b/src/transfer.html
@@ -441,8 +441,8 @@
         });
     </script>
     
-    <script src="./js/script.js"></script>
-    <!-- <script src="./js/transactions.js"></script> -->
+    <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/transactions.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script src="https://kit.fontawesome.com/c76706220f.js" crossorigin="anonymous"></script>
 
