--- a/src/profile.html
+++ b/src/profile.html
@@ -21,7 +21,7 @@
         <div class="bg-white  py-3">
             <div class="flex items-center justify-between mx-auto w-[95%] ">
                 <div class="logo">
-                <a href="index.html"><img class="" src="./CrestWayHoldinglogo/cover.jpg" alt=""/></a>
+                <a href="../index.html"><img class="" src="./CrestWayHoldinglogo/cover.jpg" alt=""/></a>
               </div>
                <!-- <div class="relative pr-2">
                         <img class="w-9 h-9 rounded-full" src="./CrestWayHoldinglogo/profilepic.jpg" alt="">
@@ -129,7 +129,7 @@
     <!-- navigation -->
     <div class="fixed bottom-0 left-0 z-50 w-full h-16 bg-white border-t border-white ">
         <div class="grid h-full max-w-lg grid-cols-5 mx-auto font-medium">
-            <a href="./index.html" class="inline-flex flex-col items-center justify-center px-5 hover:bg-gray-100  group">
+            <a href="../index.html" class="inline-flex flex-col items-center justify-center px-5 hover:bg-gray-100  group">
                 
                 <svg class="w-6 h-6 mb-2 text-gray-500   " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#6b7280" d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c.2 35.5-28.5 64.3-64 64.3H128.1c-35.3 0-64-28.7-64-64V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24zM352 224a64 64 0 1 0 -128 0 64 64 0 1 0 128 0zm-96 96c-44.2 0-80 35.8-80 80c0 8.8 7.2 16 16 16H384c8.8 0 16-7.2 16-16c0-44.2-35.8-80-80-80H256z"/></svg>
                 <span class="text-sm text-gray-500  group-hover:text-customPurple ">Home</span>
