--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <link rel="stylesheet" href="./styles.css">
+          <!-- <link rel="stylesheet" href="./styles.css"> -->
       <link href="./dist/styles.css" rel="stylesheet">
 
       <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
