--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="flex flex-col mb-12 w-[93%] mx-auto items-center text-center">
+                <div class="flex flex-col mb-10 w-[90%] mx-auto items-center text-center">
                     <h3 class="mb-1 text-2xl font-semibold text-white">Hi, <span>John Ekene Doe</span>!</h3>
                     <span class="text-xs text-white font-extralight">
                         Your IP Address <span class="font-semibold" id="location"></span> was logged on 
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="absolute bottom-1 left-4">
-                    <div>
+                    <div class="pl-2">
                         <span class="text-xs text-white font-light">Account: <span class="font-semibold">8162146893</span></span>
                     </div>
                 </div>
