--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
         <div class="w-[95%] mx-auto" >
             <div class="w-[9 mx-auto">
-                <p class="text-sm text-gray-800">Transaction History</p>
+                <p class="text-sm font-semibold text-gray-800">Transaction History</p>
             </div>
 
             <div id="transactionStart" class="botContain">
