--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Set the theme color for Chrome, Firefox OS, and Opera -->
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Set the theme color for Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#ffffff">
+
+    <!-- Set the theme color for Safari on iOS -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="white-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
           <!-- <link rel="stylesheet" href="./styles.css"> -->
       <link href="./dist/styles.css" rel="stylesheet">
 
