--- a/index.html
+++ b/index.html
@@ -149,14 +149,61 @@
                   </div>
 
                    <div class="">
-                     <button  onclick="location.href='./index.html'"  class=" w-14 max-w-sm   items-center p-3 text-sm font-medium text-center text-white bg-purple-100 rounded-lg">
-                    <div class="flex justify-center">
-                        <svg class="w-5 h-5" aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#4b0082" d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V274.7l-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7V32zM64 352c-35.3 0-64 28.7-64 64v32c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V416c0-35.3-28.7-64-64-64H346.5l-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352H64zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"/></svg>
-                    </div> 
-                    <!-- <div class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-red-500 border-2 border-white rounded-full -top-2 -end-2 dark:border-gray-900">20</div> -->
+                     <button data-modal-target="default-modal" data-modal-toggle="default-modal"    class=" w-14 max-w-sm   items-center p-3 text-sm font-medium text-center text-white bg-purple-100 rounded-lg">
+                        <div class="flex justify-center">
+                            <svg class="w-5 h-5" aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#4b0082" d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V274.7l-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7V32zM64 352c-35.3 0-64 28.7-64 64v32c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V416c0-35.3-28.7-64-64-64H346.5l-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352H64zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"/></svg>
+                        </div> 
                     </button>
                     <span class="flex justify-center pt-2 text-gray-800 text-sm font-normal">Recieve</span>
                   </div>
+
+                  <!-- Main modal -->
+                    <div id="default-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+                        <div class="relative p-4 w-full max-w-2xl max-h-full">
+                            <!-- Modal content -->
+                            <div class="relative bg-white rounded-lg shadow pb-3 ">
+                                <!-- Modal header -->
+                                <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t ">
+                                    <h3 class="text-xl font-semibold text-gray-800 ">
+                                        Account Details
+                                    </h3>
+                                    <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200  rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center " data-modal-hide="default-modal">
+                                        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                                        </svg>
+                                        <span class="sr-only">Close modal</span>
+                                    </button>
+                                </div>
+                                <!-- Modal body -->
+                                <div class="my-2 flex justify-between items-center w-[90%] mx-auto">
+                                    <div>
+                                        <h1 class="text-gray-500 text-sm font-normal">Account Number</h1>
+                                    </div>
+                                    <div>
+                                        <span class="text-gray-800 text-base font-semibold">8162146893</span>
+                                    </div>
+                                </div>
+                                <div class="my-2 flex justify-between items-center w-[90%] mx-auto">
+                                    <div>
+                                        <h1 class="text-gray-500 text-sm font-normal">Bank</h1>
+                                    </div>
+                                    <div>
+                                        <span class="text-gray-800 text-base font-semibold">CrestWay Holdings</span>
+                                    </div>
+                                </div>
+                                <div class="my-2 flex justify-between items-center w-[90%] mx-auto">
+                                    <div>
+                                        <h1 class="text-gray-500 text-sm font-normal">Name</h1>
+                                    </div>
+                                    <div>
+                                        <span class="text-gray-800 text-base font-semibold">John Ekene Doe</span>
+                                    </div>
+                                </div>
+                              
+                            </div>
+                        </div>
+                    </div>
+
                
 
                 </div>
