--- a/src/tax.html
+++ b/src/tax.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Set the theme color for Chrome, Firefox OS, and Opera -->
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Set the theme color for Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#ffffff">
+
+    <!-- Set the theme color for Safari on iOS -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="white-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    
      <link href="/dist/styles.css" rel="stylesheet">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,9 +73,9 @@
                         </li>
                         <li class="flex items-center w-full">
                             <span class="flex items-center justify-center w-10 h-10 bg-gray-100 rounded-full lg:h-12 lg:w-12  shrink-0">
-                                <svg class="w-3.5 h-3.5 text-gray-500 lg:w-4 lg:h-4 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
-                                </svg></span>
+                               <span class="tracking-tighter font-semibold text-gray-500 text-base flex items-center justify-center w-10 h-10 bg-gray-100 rounded-full lg:h-12 lg:w-12  shrink-0">
+                               OTP
+                            </span></span>
                         </li>
                     </ol>
 
